fix divisions controller
